--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Hello world</h1>
+
+    <form action="">
+        <label for="name" id="name">Name</label>
+        <input type="text" name="" id="">
+        <input type="submit" value="Submit" onclick="alert('welcome')">
+    </form>
 </body>
 </html>
